--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.0",
         "laravel": "^0.0.1",
-        "ui": "^0.2.4"
+        "ui": "^0.2.4",
+        "vue-router": "^3.5.3"
     }
 }
